--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,4 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item
+        android:id="@+id/home_button"
+        android:enabled="true"
+        android:icon="@drawable/ic_launcher"
+        android:title="@string/home_button"/>
+    <item
+        android:id="@+id/settings_button"
+        android:enabled="true"
+        android:icon="@drawable/ic_launcher"
+        android:title="@string/settings_button"/>
+    <item
+        android:id="@+id/assistant_button"
+        android:enabled="true"
+        android:icon="@drawable/ic_launcher"
+        android:title="@string/assistant_button"/>
+    <item
+        android:id="@+id/tutorial_button"
+        android:enabled="true"
+        android:icon="@drawable/ic_launcher"
+        android:title="@string/tutorial_button"/>
 </menu>
