--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -4,7 +4,8 @@
         android:id="@+id/home_button"
         android:enabled="true"
         android:icon="@drawable/ic_launcher"
-        android:title="@string/home_button"/>
+        android:title="@string/home_button"
+        />
     <item
         android:id="@+id/settings_button"
         android:enabled="true"
