--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         app:menu="@menu/bottom_navigation_menu" />
 
     <LinearLayout
-        android:layout_width="410dp"
+        android:layout_width="0dp"
         android:layout_height="489dp"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
@@ -34,8 +34,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:layout_weight="4"
+            android:layout_weight="5"
             android:text="@string/connect_button"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.492"
             app:layout_constraintStart_toStartOf="parent"
@@ -48,6 +49,7 @@
             android:layout_marginTop="12dp"
             android:layout_weight="5"
             android:text="@string/around_me_button"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.492"
             app:layout_constraintStart_toStartOf="parent"
@@ -60,6 +62,7 @@
             android:layout_marginTop="12dp"
             android:layout_weight="5"
             android:text="@string/navigation_button"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.492"
             app:layout_constraintStart_toStartOf="parent"
@@ -72,6 +75,7 @@
             android:layout_marginTop="8dp"
             android:layout_weight="5"
             android:text="@string/save_location_button"
+            android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.492"
