--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,9 +20,10 @@
             style="@style/Widget.MaterialComponents.Toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:menu="@menu/top_app_bar"
+            android:background="#D22030"
 
-            app:title="@string/page_title" />
+            app:menu="@menu/top_app_bar"
+            app:title="@string/home_title" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -31,6 +32,10 @@
         style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
+        app:itemIconTint="@drawable/nav_item_color_state"
+        app:itemRippleColor="@android:color/primary_text_dark"
+        app:itemTextColor="@drawable/nav_item_color_state"
         app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +61,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:layout_weight="5"
+            android:layout_weight=".33"
+            android:backgroundTint="#FFFFFF"
             android:text="@string/connect_appa"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +75,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:layout_weight="5"
+            android:layout_weight=".33"
+            android:backgroundTint="#FFFFFF"
             android:text="@string/around_me"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -82,7 +89,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:layout_weight="5"
+            android:layout_weight=".33"
+            android:backgroundTint="#FFFFFF"
             android:text="@string/navigation"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
