--- a/app/src/main/res/layout/place_tile.xml
+++ b/app/src/main/res/layout/place_tile.xml
@@ -6,7 +6,6 @@
 
     <data xmlns:android="http://schemas.android.com/apk/res/android">
         <variable name="place" type="com.example.appa.model.Place" />
-        <variable name="placeViewModel" type="com.example.appa.viewmodel.PlaceViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -24,10 +23,10 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{placeViewModel.name}" />
+                android:text="Test"/>
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
