--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="ic_launcher_background">#2D4E73</color>
+    <color name="red">#FF0000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
