--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,9 +75,7 @@
 
         <Button
             android:id="@+id/around_me_button"
-
-            android:onClick="openMapActivity"
-
+            android:onClick="openNavigationListAcitivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
@@ -92,6 +90,7 @@
 
         <Button
             android:id="@+id/navigation_button"
+            android:onClick="openMapActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
