Added map menu item to top app bar

--- a/app/src/main/res/menu/top_app_bar.xml
+++ b/app/src/main/res/menu/top_app_bar.xml
@@ -2,4 +2,12 @@
 <!--This is for the regular top app bar-->
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/map_toggle"
+        android:icon="@drawable/ic_baseline_map_24"
+        android:title="@string/map"
+        android:contentDescription="@string/content_description_map"
+        app:showAsAction="ifRoom" />
+
 </menu>
