--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--This is the layout for the home screen (portrait)-->
+<!--This is a layout for home screen when device is rotated to landscape position.-->
 
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -51,14 +51,13 @@
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="25dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
 
@@ -78,12 +77,12 @@
 
         <Button
             android:id="@+id/around_me_button"
-            android:onClick="openNavigationListActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:layout_weight=".33"
             android:backgroundTint="#FFFFFF"
+            android:onClick="openNavigationListActivity"
             android:text="@string/around_me"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -93,12 +92,12 @@
 
         <Button
             android:id="@+id/navigation_button"
-            android:onClick="openMapActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:layout_weight=".33"
             android:backgroundTint="#FFFFFF"
+            android:onClick="openMapActivity"
             android:text="@string/navigation"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
