--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,10 +51,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="100dp"
+        android:layout_margin="50dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,12 +75,12 @@
 
         <Button
             android:id="@+id/around_me_button"
-            android:onClick="openNavigationListActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:layout_weight=".33"
             android:backgroundTint="#FFFFFF"
+            android:onClick="openNavigationListActivity"
             android:text="@string/around_me"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -93,12 +90,12 @@
 
         <Button
             android:id="@+id/navigation_button"
-            android:onClick="openMapActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:layout_weight=".33"
             android:backgroundTint="#FFFFFF"
+            android:onClick="openMapActivity"
             android:text="@string/navigation"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
