--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="ic_launcher_background">#2D4E73</color>
     <color name="red">#FF0000</color>
     <color name="white">#FFFFFF</color>
+    <color name="mapboxGrayLight">#D3D3D3</color>
 </resources>
