--- a/app/src/main/res/layout/activity_map_with_nav.xml
+++ b/app/src/main/res/layout/activity_map_with_nav.xml
@@ -17,11 +17,13 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:background="@color/mapboxGrayLight"
         android:enabled="false"
         android:text="Start navigation"
-        android:textColor="@color/white"
+        android:textColor="@color/mapboxWhite"
         mapbox:layout_constraintStart_toStartOf="parent"
         mapbox:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
