Changed to Directory

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,14 +75,14 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/around_me_button"
+            android:id="@+id/directory_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:layout_weight=".33"
             android:backgroundTint="#FFFFFF"
             android:onClick="openNavigationListActivity"
-            android:text="@string/around_me"
+            android:text="@string/directory"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.492"
