--- a/app/src/main/res/layout/nav_list_activity.xml
+++ b/app/src/main/res/layout/nav_list_activity.xml
@@ -34,7 +34,7 @@
             android:background="@color/design_default_color_on_secondary"
 
             app:menu="@menu/top_app_bar"
-            app:title="@string/around_me" />
+            app:title="@string/directory" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
