Added an attribute to fix the accessibility for one of the issue

--- a/app/src/main/res/layout/place_tile.xml
+++ b/app/src/main/res/layout/place_tile.xml
@@ -30,7 +30,7 @@
             android:textSize="24sp"
             app:strokeColor="#000000"
             android:clickable="true"
-            />
+            android:focusable="true" />
 
     </androidx.cardview.widget.CardView>
 
