--- a/app/src/main/res/layout/nav_list_activity.xml
+++ b/app/src/main/res/layout/nav_list_activity.xml
@@ -46,7 +46,9 @@
             <SearchView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.5" />
+                android:layout_weight="0.5"
+                android:voiceSearchMode="showVoiceSearchButton|launchRecognizer"
+                />
 
             <Spinner
                 android:id="@+id/location_cat_spinner"
@@ -71,7 +73,6 @@
         style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         app:itemIconTint="@drawable/nav_item_color_state"
         app:itemRippleColor="@android:color/primary_text_dark"
         app:itemTextColor="@drawable/nav_item_color_state"
