Bluetooth devices dialog
Nasty spaghetti code that needs to be cleaned up

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
             android:layout_marginTop="16dp"
             android:layout_weight=".33"
             android:backgroundTint="#FFFFFF"
-            android:onClick="openBluetoothConnectActivity"
+            android:onClick="appaButtonPressed"
             android:text="@string/connect_appa"
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -105,6 +105,7 @@
             app:layout_constraintTop_toBottomOf="@+id/around_me_button" />
 
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
