--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -44,8 +44,8 @@
         android:layout_marginBottom="50dp"
         android:layout_weight="0.33"
         android:backgroundTint="#FFFFFF"
-        android:text="@string/navigation"
-        android:textSize="24sp"
-        android:textColor="@color/button_text_color"/>
+        android:text="@string/map"
+        android:textColor="@color/button_text_color"
+        android:textSize="24sp" />
 
 </LinearLayout>
