Changed column to auto fit

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,10 +9,10 @@
     >
 
   <GridView
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
       android:id="@+id/grid_view"
-      android:numColumns="2" />
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      android:numColumns="auto_fit" />
 
 
 </LinearLayout>
